fixed cards jumping

--- a/src/components/TrackPreviewCard/TrackPreviewCard.scss
+++ b/src/components/TrackPreviewCard/TrackPreviewCard.scss
@@ -1,8 +1,3 @@
-.cover-art {
-  min-width: 184px !important;
-  min-height: 184px !important;
-}
-
 .play-btn-icon,
 .add-to-cart-icon {
   max-width: 32px;
